# OS-labs

./: .gitignore  README.md
Channel/: CMakeLists.txt  buffered_channel.h  main.cpp
Libraries linux script/: script.sh
Libraries linux/Libraries/Number/: CMakeLists.txt  library.cpp
Libraries linux/Libraries/Vector/: CMakeLists.txt  library.h
Libraries linux/Test/: CMakeLists.txt
Libraries/Libraries linux script/Test/: main  main.cpp
Libraries/Libraries linux script/Vector/: library.cpp
Libraries/Libraries linux/Libraries/Number/: library.h
Libraries/Libraries linux/Test/: CMakeLists.txt  main.cpp
Libraries/Libraries windows script/: script.ps1
Libraries/Libraries windows script/Number/: libNumber.lib
Libraries/Libraries windows script/Test/: main.cpp
Libraries/Libraries windows/Libraries/: Libraries.sln
Libraries/Libraries windows/Libraries/Number/: Number.h
Libraries/Libraries/Debug/: Number.idb  Number.lib  Vector.exp  Vector.lib
Libraries/Libraries/Number/: Number.cpp  Number.vcxproj
Libraries/Libraries/Vector/: Vector.h
Libraries/Test/: Test.sln
Multithreading/General/: CMakeLists.txt  main.cpp
Multithreading/Linux/: CMakeLists.txt  main.cpp
Multithreading/Windows/: CMakeLists.txt  main.cpp
Pipe/Linux/A/: main.cpp
Pipe/Linux/M/: main.cpp
Pipe/Linux/Main/: CMakeLists.txt  main.cpp
Pipe/Linux/P/: main.cpp
Pipe/Linux/S/: main.cpp
Process/Linux/Killer/: CMakeLists.txt  main.cpp
Process/Linux/User/: CMakeLists.txt  main.cpp
Process/Windows/Killer/: Killer.sln
Process/Windows/User/: User.sln
(+36 files in other folders)
